<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:theme="@style/AppTheme.NoActionBar"
    android:background="@drawable/custom_background_login"
    tools:context="com.example.joaos.virtualhelper.activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_reduzida"
        android:alpha="0.4"

        android:id="@+id/imageView" />

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:textSize="65dp"
            android:textAlignment="center" />

        <Space
            android:layout_weight="3.5"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textViewLogin"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20dp"
            />

        <Button
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/LoginFacebook"
            android:id="@+id/ButtonLoginFace"
            android:background="@drawable/custom_button_login"
            android:textColor="@android:color/white"
            android:onClick="loginFacebook"
            />

        <Button
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/LoginGoogle"
            android:id="@+id/ButtonLoginGoogle"
            android:background="@drawable/custom_button_login"
            android:textColor="@android:color/white"
            android:onClick="loginGoogle"
            />

        <Space
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

    </LinearLayout>




</RelativeLayout>
