<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.joaos.virtualhelper.activity.ContainerEditActivity">

    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imageViewContEdit"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/nome"
                style="@style/textView_custom"
                android:gravity="center"
                />

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/local"
                style="@style/textView_custom"
                android:gravity="center"
                />

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/ultimaLimpeza"
                style="@style/textView_custom"
                android:gravity="center"
                />

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/icone"
                style="@style/textView_custom"
                android:gravity="center"
                />



        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <EditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/editNomeCont"
                android:gravity="center"
                />

            <EditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/editLocalCont"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="vertical">

                <ImageButton
                    android:background="@android:color/transparent"
                    android:src="@mipmap/ic_calendar"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/imgBUltimaLimpCont"
                    android:gravity="center"
                    android:onClick="mostrarDatePicker"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/textViewData"
                    android:textAlignment="center"
                    />
            </LinearLayout>


            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/textIconeContEdit"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            >

        <Button
            android:layout_weight="100"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonConcluir"
            android:text="@string/salvar"
            android:onClick="containerSalvar"
            style="@style/buttonTheme"
            />
        <Button
            android:layout_weight="100"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonCancelar"
            android:text="@string/buttonCancelar"
            android:onClick="containerCancelar"
            style="@style/buttonTheme"
            />

    </LinearLayout>


</LinearLayout>
