<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joaos.virtualhelper.activity.ObraDetalhadaActivity">



    <LinearLayout
        android:id="@+id/activity_obra_detalhada"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ImageViewCapa"
                />

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <LinearLayout  android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/textView_custom"
                        android:text="@string/textViewTitulo"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TextViewTitulo"
                        style="@style/textView_custom"
                        />

                </LinearLayout>

                <LinearLayout  android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/textView_custom"
                        android:text="@string/textViewAutor"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TextViewAutor"
                        style="@style/textView_custom"
                        />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/isbn"
                        android:layout_height="wrap_content"
                        style="@style/textView_custom"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TextViewIsbn"
                        style="@style/textView_custom"
                        />


                </LinearLayout>

                <LinearLayout  android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/textView_custom"
                        android:text="@string/ano"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TextViewAno"
                        style="@style/textView_custom"
                        />

                </LinearLayout>

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:text="@string/checkBoxEmprestado"
                    android:id="@+id/CheckBoxEmprestado"
                    app:buttonTint="@color/colorPrimary"
                    />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textView_custom"
                android:text="@string/breveDescricao"
                android:layout_marginLeft="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewBreveDesc"
                style="@style/textView_custom"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            >

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonAdcColec"
                android:text="Adicionar à coleção"
                android:onClick="obraDetalhadaEditar"
                style="@style/buttonTheme"
                />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonCancelarAdcC"
                android:text="@string/buttonCancelar"
                android:onClick="obraDetalhadaVoltar"
                style="@style/buttonTheme"
                />

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>